manifests/apps/manifests/sample-ws/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-ws
  labels:
    shared-gateway-access: 'true'
