manifests/apps/manifests/sample-ws/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: sample-ws
  replicas: 2
  template:
    metadata:
      labels:
        app: sample-ws
    spec:
      containers:
      - image: node:latest
        imagePullPolicy: IfNotPresent
        name: web
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        command: ["sh", "-c", "cp -rL /app-mnt/* /app/ && echo 'Installing dependencies...' && npm install && echo 'Starting server...' && node index.js"]
        workingDir: /app
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /app-mnt
          readOnly: true
        - name: app-dir
          mountPath: /app
        - name: tmp-npm
          mountPath: /.npm
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
        startupProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 120
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 10
          periodSeconds: 1
      volumes:
      - name: config
        configMap:
          name: sample-ws-config
      - name: app-dir
        emptyDir: {}
      - name: tmp-npm
        emptyDir: {}
