manifests/apps/manifests/sample-ws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: sample-ws
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: sample-ws
  type: ClusterIP
